# XRoboToolkit-RobotVision-PC

./: .gitignore  README.md  README_CN.md  THIRD_PARTY_NOTICE.txt
VideoTransferPC/RobotVisionTest/: CMakeLists.txt  Makefile.orin  README.md  build_release.bat  main.cpp
VideoTransferPC/VideoPlayer/: CMakeLists.txt  Main.qml  VideoPlayer.qml  build_release.bat  main.cpp
VideoTransferPC/src/: CameraCapture.cpp  CameraCapture.h  CameraDataReceiver.cpp  CameraDataReceiver.h  CameraDataSender.cpp  CameraDataSender.h  ColorFrameGenerator.cpp  ColorFrameGenerator.h  FFmpegUtils.cpp  FFmpegUtils.h  H264Decoder.cpp  H264Decoder.h  H264Encoder.cpp  H264Encoder.h  H264NALUParser.cpp  H264NALUParser.h  NetworkVideoSource.cpp  NetworkVideoSource.h  SolidColorFrame.cpp  SolidColorFrame.h  VideoFrameProvider.cpp  VideoFrameProvider.h
